feat: create message-related APIs
